--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "concurrently \"npm run mock\" \"ng serve\"",
+    "mock": "npx json-server --watch db.json --port 3000",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -22,6 +23,7 @@
     "@angular/router": "^19.2.14",
     "@angular/ssr": "^19.2.15",
     "@primeuix/themes": "^1.2.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "primeicons": "^7.0.0",
     "primeng": "^20.0.0-rc.1",
@@ -35,13 +37,21 @@
     "@angular/compiler-cli": "^19.2.14",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/json-server": "^0.14.8",
     "@types/node": "^18.18.0",
+    "concurrently": "^9.2.0",
     "jasmine-core": "~5.1.0",
+    "json-server": "^1.0.0-beta.3",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.8.3"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 18.0.5.",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
