--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,11 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/variables"
+              ]
+            },
             "outputPath": "dist/dashboard-user-form",
             "index": "src/index.html",
             "browser": "src/main.ts",
@@ -73,7 +78,7 @@
           },
           "defaultConfiguration": "development",
           "options": {
-            "proxyConfig": "proxy.conf.json"
+            "proxyConfig": "proxy.conf.json",
           }
         },
         "extract-i18n": {
