handle exports &b fix loading

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@primeuix/themes": "^1.2.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "papaparse": "^5.5.3",
     "primeicons": "^7.0.0",
     "primeng": "^20.0.0-rc.1",
     "rxjs": "~7.8.0",
@@ -39,6 +40,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/json-server": "^0.14.8",
     "@types/node": "^18.18.0",
+    "@types/papaparse": "^5.3.16",
     "concurrently": "^9.2.0",
     "jasmine-core": "~5.1.0",
     "json-server": "^1.0.0-beta.3",
